useless/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> bloc
Rule 2     bloc -> bloc statement SEMI
Rule 3     bloc -> statement SEMI
Rule 4     statement -> IF LPAREN expression RPAREN LACC bloc RACC
Rule 5     statement -> WHILE LPAREN expression RPAREN LACC bloc RACC
Rule 6     statement -> FOR LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC
Rule 7     statement -> PRINT LPAREN expression RPAREN
Rule 8     statement -> NAME EGAL expression
Rule 9     expression -> expression INF expression
Rule 10    expression -> expression INFEG expression
Rule 11    expression -> expression SUP expression
Rule 12    expression -> expression EGALEGAL expression
Rule 13    expression -> expression AND expression
Rule 14    expression -> expression OR expression
Rule 15    expression -> expression PLUS expression
Rule 16    expression -> expression TIMES expression
Rule 17    expression -> expression MINUS expression
Rule 18    expression -> expression DIVIDE expression
Rule 19    expression -> LPAREN expression RPAREN
Rule 20    expression -> NUMBER
Rule 21    expression -> NAME

Terminals, with rules where they appear

AND                  : 13
DIVIDE               : 18
EGAL                 : 8
EGALEGAL             : 12
FOR                  : 6
IF                   : 4
INF                  : 9
INFEG                : 10
LACC                 : 4 5 6
LPAREN               : 4 5 6 7 19
MINUS                : 17
NAME                 : 8 21
NUMBER               : 20
OR                   : 14
PLUS                 : 15
PRINT                : 7
RACC                 : 4 5 6
RPAREN               : 4 5 6 7 19
SEMI                 : 2 3 6 6
SUP                  : 11
TIMES                : 16
WHILE                : 5
error                : 

Nonterminals, with rules where they appear

bloc                 : 1 2 4 5 6
expression           : 4 5 6 7 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19
start                : 0
statement            : 2 3 6 6

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . bloc
    (2) bloc -> . bloc statement SEMI
    (3) bloc -> . statement SEMI
    (4) statement -> . IF LPAREN expression RPAREN LACC bloc RACC
    (5) statement -> . WHILE LPAREN expression RPAREN LACC bloc RACC
    (6) statement -> . FOR LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC
    (7) statement -> . PRINT LPAREN expression RPAREN
    (8) statement -> . NAME EGAL expression

    IF              shift and go to state 4
    WHILE           shift and go to state 5
    FOR             shift and go to state 6
    PRINT           shift and go to state 7
    NAME            shift and go to state 8

    start                          shift and go to state 1
    bloc                           shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> start .



state 2

    (1) start -> bloc .
    (2) bloc -> bloc . statement SEMI
    (4) statement -> . IF LPAREN expression RPAREN LACC bloc RACC
    (5) statement -> . WHILE LPAREN expression RPAREN LACC bloc RACC
    (6) statement -> . FOR LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC
    (7) statement -> . PRINT LPAREN expression RPAREN
    (8) statement -> . NAME EGAL expression

    $end            reduce using rule 1 (start -> bloc .)
    IF              shift and go to state 4
    WHILE           shift and go to state 5
    FOR             shift and go to state 6
    PRINT           shift and go to state 7
    NAME            shift and go to state 8

    statement                      shift and go to state 9

state 3

    (3) bloc -> statement . SEMI

    SEMI            shift and go to state 10


state 4

    (4) statement -> IF . LPAREN expression RPAREN LACC bloc RACC

    LPAREN          shift and go to state 11


state 5

    (5) statement -> WHILE . LPAREN expression RPAREN LACC bloc RACC

    LPAREN          shift and go to state 12


state 6

    (6) statement -> FOR . LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC

    LPAREN          shift and go to state 13


state 7

    (7) statement -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 14


state 8

    (8) statement -> NAME . EGAL expression

    EGAL            shift and go to state 15


state 9

    (2) bloc -> bloc statement . SEMI

    SEMI            shift and go to state 16


state 10

    (3) bloc -> statement SEMI .

    IF              reduce using rule 3 (bloc -> statement SEMI .)
    WHILE           reduce using rule 3 (bloc -> statement SEMI .)
    FOR             reduce using rule 3 (bloc -> statement SEMI .)
    PRINT           reduce using rule 3 (bloc -> statement SEMI .)
    NAME            reduce using rule 3 (bloc -> statement SEMI .)
    $end            reduce using rule 3 (bloc -> statement SEMI .)
    RACC            reduce using rule 3 (bloc -> statement SEMI .)


state 11

    (4) statement -> IF LPAREN . expression RPAREN LACC bloc RACC
    (9) expression -> . expression INF expression
    (10) expression -> . expression INFEG expression
    (11) expression -> . expression SUP expression
    (12) expression -> . expression EGALEGAL expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . NAME

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    NAME            shift and go to state 20

    expression                     shift and go to state 18

state 12

    (5) statement -> WHILE LPAREN . expression RPAREN LACC bloc RACC
    (9) expression -> . expression INF expression
    (10) expression -> . expression INFEG expression
    (11) expression -> . expression SUP expression
    (12) expression -> . expression EGALEGAL expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . NAME

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    NAME            shift and go to state 20

    expression                     shift and go to state 21

state 13

    (6) statement -> FOR LPAREN . statement SEMI expression SEMI statement RPAREN LACC bloc RACC
    (4) statement -> . IF LPAREN expression RPAREN LACC bloc RACC
    (5) statement -> . WHILE LPAREN expression RPAREN LACC bloc RACC
    (6) statement -> . FOR LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC
    (7) statement -> . PRINT LPAREN expression RPAREN
    (8) statement -> . NAME EGAL expression

    IF              shift and go to state 4
    WHILE           shift and go to state 5
    FOR             shift and go to state 6
    PRINT           shift and go to state 7
    NAME            shift and go to state 8

    statement                      shift and go to state 22

state 14

    (7) statement -> PRINT LPAREN . expression RPAREN
    (9) expression -> . expression INF expression
    (10) expression -> . expression INFEG expression
    (11) expression -> . expression SUP expression
    (12) expression -> . expression EGALEGAL expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . NAME

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    NAME            shift and go to state 20

    expression                     shift and go to state 23

state 15

    (8) statement -> NAME EGAL . expression
    (9) expression -> . expression INF expression
    (10) expression -> . expression INFEG expression
    (11) expression -> . expression SUP expression
    (12) expression -> . expression EGALEGAL expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . NAME

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    NAME            shift and go to state 20

    expression                     shift and go to state 24

state 16

    (2) bloc -> bloc statement SEMI .

    IF              reduce using rule 2 (bloc -> bloc statement SEMI .)
    WHILE           reduce using rule 2 (bloc -> bloc statement SEMI .)
    FOR             reduce using rule 2 (bloc -> bloc statement SEMI .)
    PRINT           reduce using rule 2 (bloc -> bloc statement SEMI .)
    NAME            reduce using rule 2 (bloc -> bloc statement SEMI .)
    $end            reduce using rule 2 (bloc -> bloc statement SEMI .)
    RACC            reduce using rule 2 (bloc -> bloc statement SEMI .)


state 17

    (19) expression -> LPAREN . expression RPAREN
    (9) expression -> . expression INF expression
    (10) expression -> . expression INFEG expression
    (11) expression -> . expression SUP expression
    (12) expression -> . expression EGALEGAL expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . NAME

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    NAME            shift and go to state 20

    expression                     shift and go to state 25

state 18

    (4) statement -> IF LPAREN expression . RPAREN LACC bloc RACC
    (9) expression -> expression . INF expression
    (10) expression -> expression . INFEG expression
    (11) expression -> expression . SUP expression
    (12) expression -> expression . EGALEGAL expression
    (13) expression -> expression . AND expression
    (14) expression -> expression . OR expression
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . TIMES expression
    (17) expression -> expression . MINUS expression
    (18) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 26
    INF             shift and go to state 27
    INFEG           shift and go to state 28
    SUP             shift and go to state 29
    EGALEGAL        shift and go to state 30
    AND             shift and go to state 31
    OR              shift and go to state 32
    PLUS            shift and go to state 33
    TIMES           shift and go to state 34
    MINUS           shift and go to state 35
    DIVIDE          shift and go to state 36


state 19

    (20) expression -> NUMBER .

    RPAREN          reduce using rule 20 (expression -> NUMBER .)
    INF             reduce using rule 20 (expression -> NUMBER .)
    INFEG           reduce using rule 20 (expression -> NUMBER .)
    SUP             reduce using rule 20 (expression -> NUMBER .)
    EGALEGAL        reduce using rule 20 (expression -> NUMBER .)
    AND             reduce using rule 20 (expression -> NUMBER .)
    OR              reduce using rule 20 (expression -> NUMBER .)
    PLUS            reduce using rule 20 (expression -> NUMBER .)
    TIMES           reduce using rule 20 (expression -> NUMBER .)
    MINUS           reduce using rule 20 (expression -> NUMBER .)
    DIVIDE          reduce using rule 20 (expression -> NUMBER .)
    SEMI            reduce using rule 20 (expression -> NUMBER .)


state 20

    (21) expression -> NAME .

    RPAREN          reduce using rule 21 (expression -> NAME .)
    INF             reduce using rule 21 (expression -> NAME .)
    INFEG           reduce using rule 21 (expression -> NAME .)
    SUP             reduce using rule 21 (expression -> NAME .)
    EGALEGAL        reduce using rule 21 (expression -> NAME .)
    AND             reduce using rule 21 (expression -> NAME .)
    OR              reduce using rule 21 (expression -> NAME .)
    PLUS            reduce using rule 21 (expression -> NAME .)
    TIMES           reduce using rule 21 (expression -> NAME .)
    MINUS           reduce using rule 21 (expression -> NAME .)
    DIVIDE          reduce using rule 21 (expression -> NAME .)
    SEMI            reduce using rule 21 (expression -> NAME .)


state 21

    (5) statement -> WHILE LPAREN expression . RPAREN LACC bloc RACC
    (9) expression -> expression . INF expression
    (10) expression -> expression . INFEG expression
    (11) expression -> expression . SUP expression
    (12) expression -> expression . EGALEGAL expression
    (13) expression -> expression . AND expression
    (14) expression -> expression . OR expression
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . TIMES expression
    (17) expression -> expression . MINUS expression
    (18) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 37
    INF             shift and go to state 27
    INFEG           shift and go to state 28
    SUP             shift and go to state 29
    EGALEGAL        shift and go to state 30
    AND             shift and go to state 31
    OR              shift and go to state 32
    PLUS            shift and go to state 33
    TIMES           shift and go to state 34
    MINUS           shift and go to state 35
    DIVIDE          shift and go to state 36


state 22

    (6) statement -> FOR LPAREN statement . SEMI expression SEMI statement RPAREN LACC bloc RACC

    SEMI            shift and go to state 38


state 23

    (7) statement -> PRINT LPAREN expression . RPAREN
    (9) expression -> expression . INF expression
    (10) expression -> expression . INFEG expression
    (11) expression -> expression . SUP expression
    (12) expression -> expression . EGALEGAL expression
    (13) expression -> expression . AND expression
    (14) expression -> expression . OR expression
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . TIMES expression
    (17) expression -> expression . MINUS expression
    (18) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 39
    INF             shift and go to state 27
    INFEG           shift and go to state 28
    SUP             shift and go to state 29
    EGALEGAL        shift and go to state 30
    AND             shift and go to state 31
    OR              shift and go to state 32
    PLUS            shift and go to state 33
    TIMES           shift and go to state 34
    MINUS           shift and go to state 35
    DIVIDE          shift and go to state 36


state 24

    (8) statement -> NAME EGAL expression .
    (9) expression -> expression . INF expression
    (10) expression -> expression . INFEG expression
    (11) expression -> expression . SUP expression
    (12) expression -> expression . EGALEGAL expression
    (13) expression -> expression . AND expression
    (14) expression -> expression . OR expression
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . TIMES expression
    (17) expression -> expression . MINUS expression
    (18) expression -> expression . DIVIDE expression

    SEMI            reduce using rule 8 (statement -> NAME EGAL expression .)
    RPAREN          reduce using rule 8 (statement -> NAME EGAL expression .)
    INF             shift and go to state 27
    INFEG           shift and go to state 28
    SUP             shift and go to state 29
    EGALEGAL        shift and go to state 30
    AND             shift and go to state 31
    OR              shift and go to state 32
    PLUS            shift and go to state 33
    TIMES           shift and go to state 34
    MINUS           shift and go to state 35
    DIVIDE          shift and go to state 36


state 25

    (19) expression -> LPAREN expression . RPAREN
    (9) expression -> expression . INF expression
    (10) expression -> expression . INFEG expression
    (11) expression -> expression . SUP expression
    (12) expression -> expression . EGALEGAL expression
    (13) expression -> expression . AND expression
    (14) expression -> expression . OR expression
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . TIMES expression
    (17) expression -> expression . MINUS expression
    (18) expression -> expression . DIVIDE expression

    RPAREN          shift and go to state 40
    INF             shift and go to state 27
    INFEG           shift and go to state 28
    SUP             shift and go to state 29
    EGALEGAL        shift and go to state 30
    AND             shift and go to state 31
    OR              shift and go to state 32
    PLUS            shift and go to state 33
    TIMES           shift and go to state 34
    MINUS           shift and go to state 35
    DIVIDE          shift and go to state 36


state 26

    (4) statement -> IF LPAREN expression RPAREN . LACC bloc RACC

    LACC            shift and go to state 41


state 27

    (9) expression -> expression INF . expression
    (9) expression -> . expression INF expression
    (10) expression -> . expression INFEG expression
    (11) expression -> . expression SUP expression
    (12) expression -> . expression EGALEGAL expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . NAME

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    NAME            shift and go to state 20

    expression                     shift and go to state 42

state 28

    (10) expression -> expression INFEG . expression
    (9) expression -> . expression INF expression
    (10) expression -> . expression INFEG expression
    (11) expression -> . expression SUP expression
    (12) expression -> . expression EGALEGAL expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . NAME

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    NAME            shift and go to state 20

    expression                     shift and go to state 43

state 29

    (11) expression -> expression SUP . expression
    (9) expression -> . expression INF expression
    (10) expression -> . expression INFEG expression
    (11) expression -> . expression SUP expression
    (12) expression -> . expression EGALEGAL expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . NAME

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    NAME            shift and go to state 20

    expression                     shift and go to state 44

state 30

    (12) expression -> expression EGALEGAL . expression
    (9) expression -> . expression INF expression
    (10) expression -> . expression INFEG expression
    (11) expression -> . expression SUP expression
    (12) expression -> . expression EGALEGAL expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . NAME

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    NAME            shift and go to state 20

    expression                     shift and go to state 45

state 31

    (13) expression -> expression AND . expression
    (9) expression -> . expression INF expression
    (10) expression -> . expression INFEG expression
    (11) expression -> . expression SUP expression
    (12) expression -> . expression EGALEGAL expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . NAME

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    NAME            shift and go to state 20

    expression                     shift and go to state 46

state 32

    (14) expression -> expression OR . expression
    (9) expression -> . expression INF expression
    (10) expression -> . expression INFEG expression
    (11) expression -> . expression SUP expression
    (12) expression -> . expression EGALEGAL expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . NAME

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    NAME            shift and go to state 20

    expression                     shift and go to state 47

state 33

    (15) expression -> expression PLUS . expression
    (9) expression -> . expression INF expression
    (10) expression -> . expression INFEG expression
    (11) expression -> . expression SUP expression
    (12) expression -> . expression EGALEGAL expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . NAME

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    NAME            shift and go to state 20

    expression                     shift and go to state 48

state 34

    (16) expression -> expression TIMES . expression
    (9) expression -> . expression INF expression
    (10) expression -> . expression INFEG expression
    (11) expression -> . expression SUP expression
    (12) expression -> . expression EGALEGAL expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . NAME

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    NAME            shift and go to state 20

    expression                     shift and go to state 49

state 35

    (17) expression -> expression MINUS . expression
    (9) expression -> . expression INF expression
    (10) expression -> . expression INFEG expression
    (11) expression -> . expression SUP expression
    (12) expression -> . expression EGALEGAL expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . NAME

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    NAME            shift and go to state 20

    expression                     shift and go to state 50

state 36

    (18) expression -> expression DIVIDE . expression
    (9) expression -> . expression INF expression
    (10) expression -> . expression INFEG expression
    (11) expression -> . expression SUP expression
    (12) expression -> . expression EGALEGAL expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . NAME

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    NAME            shift and go to state 20

    expression                     shift and go to state 51

state 37

    (5) statement -> WHILE LPAREN expression RPAREN . LACC bloc RACC

    LACC            shift and go to state 52


state 38

    (6) statement -> FOR LPAREN statement SEMI . expression SEMI statement RPAREN LACC bloc RACC
    (9) expression -> . expression INF expression
    (10) expression -> . expression INFEG expression
    (11) expression -> . expression SUP expression
    (12) expression -> . expression EGALEGAL expression
    (13) expression -> . expression AND expression
    (14) expression -> . expression OR expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression TIMES expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . LPAREN expression RPAREN
    (20) expression -> . NUMBER
    (21) expression -> . NAME

    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 19
    NAME            shift and go to state 20

    expression                     shift and go to state 53

state 39

    (7) statement -> PRINT LPAREN expression RPAREN .

    SEMI            reduce using rule 7 (statement -> PRINT LPAREN expression RPAREN .)
    RPAREN          reduce using rule 7 (statement -> PRINT LPAREN expression RPAREN .)


state 40

    (19) expression -> LPAREN expression RPAREN .

    RPAREN          reduce using rule 19 (expression -> LPAREN expression RPAREN .)
    INF             reduce using rule 19 (expression -> LPAREN expression RPAREN .)
    INFEG           reduce using rule 19 (expression -> LPAREN expression RPAREN .)
    SUP             reduce using rule 19 (expression -> LPAREN expression RPAREN .)
    EGALEGAL        reduce using rule 19 (expression -> LPAREN expression RPAREN .)
    AND             reduce using rule 19 (expression -> LPAREN expression RPAREN .)
    OR              reduce using rule 19 (expression -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 19 (expression -> LPAREN expression RPAREN .)
    TIMES           reduce using rule 19 (expression -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 19 (expression -> LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 19 (expression -> LPAREN expression RPAREN .)
    SEMI            reduce using rule 19 (expression -> LPAREN expression RPAREN .)


state 41

    (4) statement -> IF LPAREN expression RPAREN LACC . bloc RACC
    (2) bloc -> . bloc statement SEMI
    (3) bloc -> . statement SEMI
    (4) statement -> . IF LPAREN expression RPAREN LACC bloc RACC
    (5) statement -> . WHILE LPAREN expression RPAREN LACC bloc RACC
    (6) statement -> . FOR LPAREN statement SEMI expression SEMI statement RPAREN LACC bloc RACC
    (7) statement -> . PRINT LPAREN expression RPAREN
    (8) statement -> . NAME EGAL expression

    IF              shift and go to state 4
    WHILE           shift and go to state 5
    FOR             shift and go to state 6
    PRINT           shift and go to state 7
    NAME            shift and go to state 8

    bloc                           shift and go to state 54
    statement                      shift and go to state 3

state 42

    (9) expression -> expression INF expression .
    (9) expression -> expression . INF expression
    (10) expression -> expression . INFEG expression
    (11) expression -> expression . SUP expression
    (12) expression -> expression . EGALEGAL expression
    (13) expression -> expression . AND expression
    (14) expression -> expression . OR expression
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . TIMES expression
    (17) expression -> expression . MINUS expression
    (18) expression -> expression . DIVIDE expression

    RPAREN          reduce using rule 9 (expression -> expression INF expression .)
    INF             reduce using rule 9 (expression -> expression INF expression .)
    INFEG           reduce using rule 9 (expression -> expression INF expression .)
    SUP             reduce using rule 9 (expression -> expression INF expression .)
    EGALEGAL        reduce using rule 9 (expression -> expression INF expression .)
    AND             reduce using rule 9 (expression -> expression INF expression .)
    OR              reduce using rule 9 (expression -> expression INF expression .)
    SEMI            reduce using rule 9 (expression -> expression INF expression .)
    PLUS            shift and go to state 33
    TIMES           shift and go to state 34
    MINUS           shift and go to state 35
    DIVIDE          shift and go to state 36

  ! PLUS            [ reduce using rule 9 (expression -> expression INF expression .) ]
  ! TIMES           [ reduce using rule 9 (expression -> expression INF expression .) ]
  ! MINUS           [ reduce using rule 9 (expression -> expression INF expression .) ]
  ! DIVIDE          [ reduce using rule 9 (expression -> expression INF expression .) ]
  ! INF             [ shift and go to state 27 ]
  ! INFEG           [ shift and go to state 28 ]
  ! SUP             [ shift and go to state 29 ]
  ! EGALEGAL        [ shift and go to state 30 ]
  ! AND             [ shift and go to state 31 ]
  ! OR              [ shift and go to state 32 ]


state 43

    (10) expression -> expression INFEG expression .
    (9) expression -> expression . INF expression
    (10) expression -> expression . INFEG expression
    (11) expression -> expression . SUP expression
    (12) expression -> expression . EGALEGAL expression
    (13) expression -> expression . AND expression
    (14) expression -> expression . OR expression
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . TIMES expression
    (17) expression -> expression . MINUS expression
    (18) expression -> expression . DIVIDE expression

    RPAREN          reduce using rule 10 (expression -> expression INFEG expression .)
    INF             reduce using rule 10 (expression -> expression INFEG expression .)
    INFEG           reduce using rule 10 (expression -> expression INFEG expression .)
    SUP             reduce using rule 10 (expression -> expression INFEG expression .)
    EGALEGAL        reduce using rule 10 (expression -> expression INFEG expression .)
    AND             reduce using rule 10 (expression -> expression INFEG expression .)
    OR              reduce using rule 10 (expression -> expression INFEG expression .)
    SEMI            reduce using rule 10 (expression -> expression INFEG expression .)
    PLUS            shift and go to state 33
    TIMES           shift and go to state 34
    MINUS           shift and go to state 35
    DIVIDE          shift and go to state 36

  ! PLUS            [ reduce using rule 10 (expression -> expression INFEG expression .) ]
  ! TIMES           [ reduce using rule 10 (expression -> expression INFEG expression .) ]
  ! MINUS           [ reduce using rule 10 (expression -> expression INFEG expression .) ]
  ! DIVIDE          [ reduce using rule 10 (expression -> expression INFEG expression .) ]
  ! INF             [ shift and go to state 27 ]
  ! INFEG           [ shift and go to state 28 ]
  ! SUP             [ shift and go to state 29 ]
  ! EGALEGAL        [ shift and go to state 30 ]
  ! AND             [ shift and go to state 31 ]
  ! OR              [ shift and go to state 32 ]


state 44

    (11) expression -> expression SUP expression .
    (9) expression -> expression . INF expression
    (10) expression -> expression . INFEG expression
    (11) expression -> expression . SUP expression
    (12) expression -> expression . EGALEGAL expression
    (13) expression -> expression . AND expression
    (14) expression -> expression . OR expression
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . TIMES expression
    (17) expression -> expression . MINUS expression
    (18) expression -> expression . DIVIDE expression

    RPAREN          reduce using rule 11 (expression -> expression SUP expression .)
    INF             reduce using rule 11 (expression -> expression SUP expression .)
    INFEG           reduce using rule 11 (expression -> expression SUP expression .)
    SUP             reduce using rule 11 (expression -> expression SUP expression .)
    EGALEGAL        reduce using rule 11 (expression -> expression SUP expression .)
    AND             reduce using rule 11 (expression -> expression SUP expression .)
    OR              reduce using rule 11 (expression -> expression SUP expression .)
    SEMI            reduce using rule 11 (expression -> expression SUP expression .)
    PLUS            shift and go to state 33
    TIMES           shift and go to state 34
    MINUS           shift and go to state 35
    DIVIDE          shift and go to state 36

  ! PLUS            [ reduce using rule 11 (expression -> expression SUP expression .) ]
  ! TIMES           [ reduce using rule 11 (expression -> expression SUP expression .) ]
  ! MINUS           [ reduce using rule 11 (expression -> expression SUP expression .) ]
  ! DIVIDE          [ reduce using rule 11 (expression -> expression SUP expression .) ]
  ! INF             [ shift and go to state 27 ]
  ! INFEG           [ shift and go to state 28 ]
  ! SUP             [ shift and go to state 29 ]
  ! EGALEGAL        [ shift and go to state 30 ]
  ! AND             [ shift and go to state 31 ]
  ! OR              [ shift and go to state 32 ]


state 45

    (12) expression -> expression EGALEGAL expression .
    (9) expression -> expression . INF expression
    (10) expression -> expression . INFEG expression
    (11) expression -> expression . SUP expression
    (12) expression -> expression . EGALEGAL expression
    (13) expression -> expression . AND expression
    (14) expression -> expression . OR expression
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . TIMES expression
    (17) expression -> expression . MINUS expression
    (18) expression -> expression . DIVIDE expression

    RPAREN          reduce using rule 12 (expression -> expression EGALEGAL expression .)
    INF             reduce using rule 12 (expression -> expression EGALEGAL expression .)
    INFEG           reduce using rule 12 (expression -> expression EGALEGAL expression .)
    SUP             reduce using rule 12 (expression -> expression EGALEGAL expression .)
    EGALEGAL        reduce using rule 12 (expression -> expression EGALEGAL expression .)
    AND             reduce using rule 12 (expression -> expression EGALEGAL expression .)
    OR              reduce using rule 12 (expression -> expression EGALEGAL expression .)
    SEMI            reduce using rule 12 (expression -> expression EGALEGAL expression .)
    PLUS            shift and go to state 33
    TIMES           shift and go to state 34
    MINUS           shift and go to state 35
    DIVIDE          shift and go to state 36

  ! PLUS            [ reduce using rule 12 (expression -> expression EGALEGAL expression .) ]
  ! TIMES           [ reduce using rule 12 (expression -> expression EGALEGAL expression .) ]
  ! MINUS           [ reduce using rule 12 (expression -> expression EGALEGAL expression .) ]
  ! DIVIDE          [ reduce using rule 12 (expression -> expression EGALEGAL expression .) ]
  ! INF             [ shift and go to state 27 ]
  ! INFEG           [ shift and go to state 28 ]
  ! SUP             [ shift and go to state 29 ]
  ! EGALEGAL        [ shift and go to state 30 ]
  ! AND             [ shift and go to state 31 ]
  ! OR              [ shift and go to state 32 ]


state 46

    (13) expression -> expression AND expression .
    (9) expression -> expression . INF expression
    (10) expression -> expression . INFEG expression
    (11) expression -> expression . SUP expression
    (12) expression -> expression . EGALEGAL expression
    (13) expression -> expression . AND expression
    (14) expression -> expression . OR expression
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . TIMES expression
    (17) expression -> expression . MINUS expression
    (18) expression -> expression . DIVIDE expression

    RPAREN          reduce using rule 13 (expression -> expression AND expression .)
    AND             reduce using rule 13 (expression -> expression AND expression .)
